<resources>
    <string name="app_name">OOTD</string>
    <string name="newUserButtonText">New user</string>
    <string name="existingUserButtonText">Existing user</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_closet">Closet</string>
    <string name="title_outfit_log">Outfit Log</string>
    <string name="title_add_plan">Add/Plan</string>
    <string name="title_generate">Generate</string>
    <string name="title_profile">Profile</string>
    <string name="title_plan_outfit">Plan Outfit</string>
    <string name="title_add_item">Add Item</string>
    <string name="hello_closet_garment_fragment">This is the Closet (Garment) Fragment</string>
    <string name="hello_closet_outfit_fragment">This is the Closet (Outfit) Fragment</string>
    <string name="hello_log_fragment">This is the Outfit Log Fragment</string>
    <string name="hello_add_fragment">This is the Add/Plan Fragment</string>
    <string name="hello_generate_fragment">This is the Generate Fragment</string>
    <string name="hello_profile_fragment">This is the Profile Fragment</string>
    <string name="add_item_dsc">Add item to closet.</string>
    <string name="plan_outfit_dsc">Plan outfit for closet.</string>
    <string name="done_planning_btn">Done Planning</string>
    <string name="dropdown_menu_default">Tops</string>
    <string-array name="category_dropdown_menu_items">
        <item>Tops</item>
        <item>Bottoms</item>
        <item>Shoes</item>
        <item>Outerwear</item>
        <item>Dresses</item>
        <item>Swim</item>
        <item>Accessories</item>
        <item>Jewelry</item>
        <item>Bags</item>
        <item>Headwear</item>
        <item>Other</item>
    </string-array>
    <string name="tops">Tops</string>
    <string name="bottoms">Bottoms</string>
    <string name="shoes">Shoes</string>
    <string name="outerwear">Outerwear</string>
    <string name="dresses">Dresses</string>
    <string name="swim">Swim</string>
    <string name="accessories">Accessories</string>
    <string name="jewelry">Jewelry</string>
    <string name="bags">Bags</string>
    <string name="headwear">Headwear</string>
    <string name="other">Other</string>
    <string-array name="subcategory_tops">
        <item>Blouse</item>
        <item>Camisole</item>
        <item>Tank Top</item>
        <item>T-shirt</item>
        <item>Strapless</item>
        <item>Jersey</item>
        <item>Shirt</item>
        <item>Hoodie</item>
        <item>Sweatshirt</item>
        <item>Sweater</item>
        <item>Vest</item>
        <item>Bodysuit</item>
        <item>Cardigan</item>
    </string-array>
    <string-array name="subcategory_bottoms">
        <item>Jeans</item>
        <item>Pants</item>
        <item>Skirt</item>
        <item>Shorts</item>
        <item>Sweatpants</item>
        <item>Dress Pants</item>
        <item>Tights</item>
        <item>Leggings</item>
    </string-array>
    <string-array name="subcategory_outerwear">
        <item>Jacket</item>
        <item>Coat</item>
        <item>Blazer</item>
        <item>Puffer</item>
    </string-array>
    <string-array name="subcategory_bags">
        <item>Backpack</item>
        <item>Briefcase</item>
        <item>Clutch</item>
        <item>Cross-body</item>
        <item>Tote</item>
        <item>Shoulder bag</item>
        <item>Wallet</item>
        <item>Belt bag</item>
    </string-array>
    <string-array name="subcategory_shoes">
        <item>Boots</item>
        <item>Sneakers</item>
        <item>Flats</item>
        <item>Sandals</item>
        <item>Loafers</item>
        <item>Heels</item>
        <item>Wedges</item>
    </string-array>
    <string-array name="subcategory_dresses">
        <item>Maxi Dress</item>
        <item>Midi Dress</item>
        <item>Mini Dress</item>
        <item>Romper</item>
        <item>Jumpsuit</item>
    </string-array>
    <string-array name="subcategory_swim">
        <item>Bikini</item>
        <item>One-piece</item>
        <item>Trunks</item>
        <item>Cover-up</item>
    </string-array>
    <string-array name="subcategory_accessories">
        <item>Belt</item>
        <item>Gloves</item>
        <item>Scarf</item>
        <item>Sunglasses</item>
        <item>Tie</item>
        <item>Socks</item>
        <item>Pocket Square</item>
        <item>Other Accessory</item>
    </string-array>
    <string-array name="subcategory_jewelry">
        <item>Bracelet</item>
        <item>Ring</item>
        <item>Necklace</item>
        <item>Earrings</item>
        <item>Watch</item>
        <item>Other Jewelry</item>
    </string-array>
    <string-array name="subcategory_headwear">
        <item>Hat</item>
        <item>Hair Accessories</item>
        <item>Hijab</item>
    </string-array>
    <string-array name="subcategory_other">
        <item>Other</item>
    </string-array>
    <string-array name="subcategory_dropdown_menu_items">
        
        <item>Blouse</item>
        <item>Camisole</item>
        <item>Tank Top</item>
        <item>T-shirt</item>
        <item>Strapless</item>
        <item>Jersey</item>
        <item>Shirt</item>
        <item>Hoodie</item>
        <item>Sweatshirt</item>
        <item>Sweater</item>
        <item>Vest</item>
        <item>Bodysuit</item>
        <item>Cardigan</item>
        
        <item>Jeans</item>
        <item>Pants</item>
        <item>Skirt</item>
        <item>Shorts</item>
        <item>Sweatpants</item>
        <item>Dress Pants</item>
        <item>Tights</item>
        <item>Leggings</item>
        
        <item>Jacket</item>
        <item>Coat</item>
        <item>Blazer</item>
        <item>Puffer</item>
        
        <item>Backpack</item>
        <item>Briefcase</item>
        <item>Clutch</item>
        <item>Cross-body</item>
        <item>Tote</item>
        <item>Shoulder bag</item>
        <item>Wallet</item>
        <item>Belt bag</item>
        
        <item>Boots</item>
        <item>Sneakers</item>
        <item>Flats</item>
        <item>Sandals</item>
        <item>Loafers</item>
        <item>Heels</item>
        <item>Wedges</item>
        
        <item>Maxi Dress</item>
        <item>Midi Dress</item>
        <item>Mini Dress</item>
        <item>Romper</item>
        <item>Jumpsuit</item>
        
        <item>Bikini</item>
        <item>One-piece</item>
        <item>Trunks</item>
        <item>Cover-up</item>
        
        <item>Belt</item>
        <item>Gloves</item>
        <item>Scarf</item>
        <item>Sunglasses</item>
        <item>Tie</item>
        <item>Socks</item>
        <item>Pocket Square</item>
        <item>Other Accessory</item>
        
        <item>Bracelet</item>
        <item>Ring</item>
        <item>Necklace</item>
        <item>Earrings</item>
        <item>Watch</item>
        <item>Other Jewelry</item>
        
        <item>Hat</item>
        <item>Hair Accessories</item>
        <item>Hijab</item>

    </string-array>
    <string name="blouse">Blouse</string>
    <string name="camisole">Camisole</string>
    <string name="tanktop">Tank Top</string>
    <string name="tshirt">T-shirt</string>
    <string name="strapless">Strapless</string>
    <string name="jersey">Jersey</string>
    <string name="shirt">Shirt</string>
    <string name="hoodie">Hoodie</string>
    <string name="sweatshirt">Sweatshirt</string>
    <string name="sweater">Sweater</string>
    <string name="vest">Vest</string>
    <string name="bodysuit">Bodysuit</string>
    <string name="cardigan">Cardigan</string>
    <string name="jeans">Jeans</string>
    <string name="pants">Pants</string>
    <string name="skirt">Skirt</string>
    <string name="shorts">Shorts</string>
    <string name="sweatpants">Sweatpants</string>
    <string name="dress_pants">Dress Pants</string>
    <string name="tights">Tights</string>
    <string name="leggings">Leggings</string>
    <string name="jacket">Jacket</string>
    <string name="coat">Coat</string>
    <string name="blazer">Blazer</string>
    <string name="puffer">Puffer</string>
    <string name="backpack">Backpack</string>
    <string name="briefcase">Briefcase</string>
    <string name="clutch">Clutch</string>
    <string name="cross_body">Cross-body</string>
    <string name="tote">Tote</string>
    <string name="shoulder_bag">Shoulder bag</string>
    <string name="wallet">Wallet</string>
    <string name="belt_bag">Belt bag</string>
    <string name="boots">Boots</string>
    <string name="sneakers">Sneakers</string>
    <string name="flats">Flats</string>
    <string name="sandals">Sandals</string>
    <string name="loafers">Loafers</string>
    <string name="heels">Heels</string>
    <string name="wedges">Wedges</string>
    <string name="maxi">Maxi dress</string>
    <string name="midi">Midi dress</string>
    <string name="mini">Mini dress</string>
    <string name="romper">Romper</string>
    <string name="jumpsuit">Jumpsuit</string>
    <string name="bikini">Bikini</string>
    <string name="one_piece">One-piece</string>
    <string name="trunks">Trunks</string>
    <string name="cover_up">Cover-up</string>
    <string name="belt">Belt</string>
    <string name="gloves">Gloves</string>
    <string name="scarf">Scarf</string>
    <string name="sunglasses">Sunglasses</string>
    <string name="tie">Tie</string>
    <string name="socks">Socks</string>
    <string name="pocket_sq">Pocket Square</string>
    <string name="other_acc">Other Accessory</string>
    <string name="bracelet">Bracelet</string>
    <string name="ring">Ring</string>
    <string name="necklace">Necklace</string>
    <string name="earrings">Earrings</string>
    <string name="watch">Watch</string>
    <string name="other_jewel">Other Jewelry</string>
    <string name="hat">Hat</string>
    <string name="hijab">Hijab</string>
    <string name="hair_acc">Hair Accessory</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="textEmail">Email</string>
    <string name="textPassword">Password</string>
    <string name="textName">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="title_activity_camera_application">CameraApplication</string>
    <string name="next">Next</string>
    <string name="click_to_take_picture">Press the camera icon to launch the camera</string>
    <string name="save_button">Save</string>
    <string name="edit_button">Edit Outfit</string>
    <string name="delete_button">Delete Listing</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub-Category</string>
    <string name="weather">Weather</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="grey">Grey</string>
    <string name="magenta">Magenta</string>
    <string name="pink">Pink</string>
    <string name="beige">Beige</string>
    <string name="brown">Brown</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="edit_listing">Edit Listing</string>
    <string name="view_listing">View Listing</string>
    <string name="delete_listing">Delete Listing</string>
    <string name="sort_and_filter">Sort and Filter</string>
    <string name="color">Color</string>
    <string name="show_favorites">Show Favorites</string>
    <string name="clear_filters_text">Clear Filters</string>
    <string name="apply_filters_text">Apply Filters</string>
    <string name="filters">Filters</string>
</resources>