<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_closet"
        android:icon="@drawable/icon"
        android:title="@string/title_closet" />

    <item
        android:id="@+id/navigation_outfit_log"
        android:icon="@drawable/icon"
        android:title="@string/title_outfit_log" />

    <item
        android:id="@+id/navigation_add_plan"
        android:icon="@drawable/icon"
        android:title="@string/title_add_plan" />

    <item
        android:id="@+id/navigation_generate"
        android:icon="@drawable/icon"
        android:title="@string/title_generate" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon"
        android:title="@string/title_profile" />

</menu>