<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="23dp" >


        <TextView
            android:id="@+id/SortFilterTextOutfits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sort_and_filter"
            android:textColor="@color/dark_text"
            android:textSize="25sp"
            android:layout_marginBottom="1dp" />

        <CheckBox
            android:id="@+id/checkboxFavoritesOutfits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_favorites"
            android:textSize="20sp"
            android:textColor="@color/dark_text"
            android:buttonTint="@color/nav_bar_color"
            android:layout_marginTop="8dp"/>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <Button
                android:id="@+id/applyFilterButtonOutfits"
                android:layout_width="177dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text="@string/apply_filters_text"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/clearFilterButtonOutfits"
                android:layout_weight="1"
                android:text="@string/clear_filters_text"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/light_pink"
                android:layout_height="0dp"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>